--- a/ticket.html
+++ b/ticket.html
@@ -416,38 +416,32 @@
 
     // Pull an author identifier from any schema
     function getRawAuthor(obj){
-      const candidates = [
-        obj?.authorLabel,
-        obj?.authorEmail,
-        obj?.email,
-        obj?.author,
-        obj?.by,
-        obj?.byEmail,
-        obj?.createdBy,
-        obj?.createdByEmail,
-        obj?.userEmail,
-        obj?.user,
-        obj?.uid,
-        obj?.stewardUid,
-        obj?.authorUid,
-        obj?.stewardEmail,
-        obj?.steward,
-        obj?.stewardName,
-        obj?.name,
-        obj?.displayName,
-      ];
 
-      for (const v of candidates){
-        if (typeof v === "string" && v.trim()) return v.trim();
-        if (v && typeof v === "object"){
-          const inner = v.email || v.authorEmail || v.userEmail || v.uid || v.name || v.displayName || v.id;
-          if (typeof inner === "string" && inner.trim()) return inner.trim();
-        }
-      }
-      // docId fallback (common legacy)
-      if (typeof obj?._docId === "string" && obj._docId.trim()) return obj._docId.trim();
-      return "";
-    }
+  // ✅ YOUR ACTUAL FIELD (highest priority)
+  if (typeof obj?.authorKey === "string" && obj.authorKey.trim()) {
+    return obj.authorKey.trim();
+  }
+
+  // backwards compatibility / future proofing
+  const candidates = [
+    obj?.authorLabel,
+    obj?.authorEmail,
+    obj?.email,
+    obj?.author,
+    obj?.by,
+    obj?.createdBy,
+    obj?.userEmail,
+    obj?.user,
+    obj?.uid,
+    obj?.authorUid
+  ];
+
+  for (const v of candidates){
+    if (typeof v === "string" && v.trim()) return v.trim();
+  }
+
+  return "";
+}
 
     // ---------------------------
     // UID -> email resolver (cached)
