--- a/RT.html
+++ b/RT.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>IFWL Race Team Gate (Test v2)</h1>
+    <h1>IFWL Race Team Gate (Test v3)</h1>
     <p class="muted">
       Login with Discord. If you have <b>IFWL Race team Assessor</b> or <b>IFWL RACE TEAM ACC</b>, you’ll get access.
     </p>
@@ -82,7 +82,7 @@
 
     show("Checking your roles…", true);
 
-    const checkUrl = FUNCTION + `?code=${encodeURIComponent(code)}&redirect=${encodeURIComponent(REDIRECT_URI)}`;
+    const checkUrl = FUNCTION + `?code=${encodeURIComponent(code)}&redirect=${encodeURIComponent(REDIRECT_URI)}&issue=1`;
     const r = await fetch(checkUrl);
     const data = await r.json();
 
