--- a/split-manager-test.html
+++ b/split-manager-test.html
@@ -451,7 +451,11 @@
       return;
     }
 
-    drivers = arr.map(normalizeDriver);
+    drivers = arr
+  .map(normalizeDriver)
+  .filter(d => !d.isServerAdmin)
+  .filter(d => !d.name.startsWith("Unknown"));
+
 
     // show a quick structure preview
     const first = arr[0] || {};
