--- a/split-manager-test.html
+++ b/split-manager-test.html
@@ -126,6 +126,7 @@
               <th class="text-left py-2 pr-3">#</th>
               <th class="text-left py-2 pr-3">Name</th>
               <th class="text-left py-2 pr-3">Race #</th>
+              <th class="text-left py-2 pr-3">Car</th>
               <th class="text-left py-2 pr-3">Player ID</th>
               <th class="text-left py-2 pr-3">Notes</th>
             </tr>
@@ -173,6 +174,38 @@
       .replaceAll("'", "&#039;");
   }
 
+// ACC car model ID -> name (edit as needed)
+// If a car shows as "CarModel X", tell me X and I’ll map it.
+const CAR_MODELS = {
+  0: "Porsche 991 GT3 R (2018)",
+  1: "Mercedes-AMG GT3 (2015)",
+  2: "Ferrari 488 GT3 (2018)",
+  3: "Audi R8 LMS (2015)",
+  4: "Lamborghini Huracán GT3 (2015)",
+  5: "McLaren 650S GT3",
+  6: "Nissan GT-R Nismo GT3 (2018)",
+  7: "BMW M6 GT3",
+  8: "Bentley Continental GT3 (2018)",
+
+  9: "Porsche 991.2 GT3 R (2019)",
+  10: "Ferrari 488 GT3 Evo (2020)",
+  11: "Mercedes-AMG GT3 Evo (2020)",
+  12: "Lamborghini Huracán GT3 Evo (2019)",
+  13: "McLaren 720S GT3 (2019)",
+  14: "Audi R8 LMS Evo (2019)",
+  15: "Honda NSX GT3 (2019)",
+  16: "Lexus RC F GT3",
+  17: "Lamborghini Huracán Super Trofeo",
+
+  18: "BMW M4 GT3",
+  19: "Audi R8 LMS Evo II (2022)",
+  20: "Ferrari 296 GT3",
+  21: "Lamborghini Huracán GT3 Evo2",
+  22: "Porsche 992 GT3 R",
+  23: "McLaren 720S GT3 Evo",
+};
+
+  
   // =========================
   // SimGrid Entrylist parsing helpers
   // =========================
@@ -223,13 +256,27 @@
     if (entry.isServerAdmin) notes.push("server admin");
     if (d0 && d0.shortName) notes.push("tag: " + d0.shortName);
 
+const carModelId =
+  (entry.forcedCarModel !== undefined && entry.forcedCarModel !== null)
+    ? Number(entry.forcedCarModel)
+    : null;
+
+const carName =
+  (carModelId !== null && CAR_MODELS[carModelId])
+    ? CAR_MODELS[carModelId]
+    : (carModelId !== null ? `CarModel ${carModelId}` : "");
+    
     return {
-      raw: entry,
-      name,
-      raceNumber,
-      playerID: String(playerID || ""),
-      notes: notes.join(" • "),
-    };
+  raw: entry,
+  name,
+  raceNumber,
+  carModelId,
+  carName,
+  playerID: String(playerID || ""),
+  isServerAdmin: !!entry.isServerAdmin,
+  notes: notes.join(" • "),
+};
+
   }
 
   // =========================
